# skypro_hw_11_2_part_2

./: .flake8  .gitignore  README.md  app.py  pyproject.toml  utils.py
templates/: card.html  list.html  search.html  skill.html
