[tool.poetry]
name = "skypro_hw_10_2"
version = "0.1.0"
description = ""
authors = ["Artem Kuzmenko"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
